# misars-pipeline-kedro

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  session_store.db
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  kedro.yaml  test.yaml
.viz/: stats.json
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml  parameters_graph_transposer.yml  parameters_huggingface_integration.yml  parameters_onnx_converter.yml  parameters_postprocess_tester.yml  parameters_yolo_converter.yml
conf/local/: credentials.yml  credentials_template.yml
data/01_models_info/: filter_models.csv  repo_models_list.csv  unet_models_list.csv  yolo_models_list.csv
docs/: notes.md  steps.md  tech.md
docs/puml/: flow1.puml
docs/source/: conf.py  index.rst
src/misars_pipeline_kedro/: __init__.py  __main__.py  settings.py
src/misars_pipeline_kedro/datasets/: onnx_dataset.py  pt_dataset.py  yolo_dataset.py
src/misars_pipeline_kedro/events/: event_handler.py
src/misars_pipeline_kedro/hooks/: hooks.py
src/misars_pipeline_kedro/managers/: task_manager.py
src/misars_pipeline_kedro/pipelines/: sit_manager.py
src/misars_pipeline_kedro/pipelines/graph_transposer/: __init__.py  nodes.py  pipeline.py
src/misars_pipeline_kedro/pipelines/huggingface_integration/: __init__.py  nodes.py  pipeline.py
src/misars_pipeline_kedro/pipelines/onnx_converter/: __init__.py  nodes.py  pipeline.py
src/misars_pipeline_kedro/pipelines/postprocess_checker/: __init__.py  nodes.py  pipeline.py
src/misars_pipeline_kedro/pipelines/postprocess_tester/: __init__.py  nodes.py  pipeline.py
src/misars_pipeline_kedro/pipelines/system_intergration_test/: nodes.py  pipeline.py
src/misars_pipeline_kedro/pipelines/yolo_converter/: nodes.py  pipeline.py
src/misars_pipeline_kedro/schedulers/: apscheduler_adapter.py  scheduler_interface.py
src/model_deployment_test/: __init__.py  __main__.py
tests/: test_run.py
tests/pipelines/graph_transposer/: test_pipeline.py
tests/pipelines/huggingface_integration/: test_pipeline.py
tests/pipelines/onnx_converter/: test_pipeline.py
tests/pipelines/postprocess_tester/: test_pipeline.py
tests/pipelines/system_intergration_test/: test_nodes.py
